libraries/ckit/regression/valid-programs/a60.c
typedef struct {int x,y; } point;

point x = {2,3};

void main () {
  return;
}
