libraries/ckit/regression/invalid-programs/r60.c

  struct w { int x,y,z; };
  
  void main() {
   struct w foo;
   float x;
   x = foo;
  
  }
